WooCommerce: fix overlay z-index on single

--- a/src/scss/woocommerce/pages/_single-product.scss
+++ b/src/scss/woocommerce/pages/_single-product.scss
@@ -944,3 +944,8 @@
     }
   }
 }
+
+// Photoswipe
+.pswp {
+  z-index: 15000
+}
